--- a/css/play_page.css
+++ b/css/play_page.css
@@ -2,15 +2,15 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #afafaf;
 }
 
 .container {
     max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #afafaf;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
 .video-player {
