--- a/css/index_page.css
+++ b/css/index_page.css
@@ -35,13 +35,13 @@ nav ul.nav-list {
 }
 
 nav ul.nav-list li {
-    margin: 0 0.8em;
+    margin: 0 0.5em;
 }
 
 nav ul.nav-list li a.nav-link {
     color: #fff;
     text-decoration: none;
-    padding: 0.5em 1em;
+    padding: 0.5em 0.5em;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -93,7 +93,7 @@ main {
 .fixed-options {
     display: flex;
     flex-wrap: wrap;
-    gap: 1em;
+    /*gap: 1em;*/
     justify-content: center;
 }
 
@@ -101,7 +101,7 @@ main {
     background: #f4f4f4;
     padding: 1em;
     border-radius: 5px;
-    width: calc(80% - 2em);
+    width: calc(100% - 1em);
     box-sizing: border-box;
 }
 
